# diplom

./: CMakeLists.txt  balancer.cu  balancer.h  class_diagram_gpu_side.puml  class_diagram_server_side.puml  connection_controller.cpp  connection_controller.h  connection_observer.cpp  connection_observer.h  connection_observing.puml  gpu_controller.cu  gpu_controller.h  gpu_work.puml  hello.cu  i_balancer.h  i_connection.h  i_connection_controller.h  i_connection_observer.h  i_gpu_controller.h  i_server.h  i_socket.h  main.cu  qt_connection.cpp  qt_connection.h  qt_socket.h  server.cpp  server.h  server_side.puml
